Final with Reflection

--- a/Dueling_DDQN_MsPacman.ipynb
+++ b/Dueling_DDQN_MsPacman.ipynb
@@ -51,7 +51,7 @@
         "outputId": "9ae6d119-f96a-44e7-d281-0e1395055332",
         "collapsed": true
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -141,7 +141,7 @@
         "outputId": "cbe06c13-90ec-4060-fd78-7b28500d883f",
         "collapsed": true
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -283,7 +283,7 @@
       "metadata": {
         "id": "_W_afhrzUAnp"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -308,7 +308,7 @@
         },
         "outputId": "22096257-1fa6-41b8-efd8-506e6fab9083"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -329,7 +329,7 @@
       "metadata": {
         "id": "vlWPUjKfLv9y"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -361,7 +361,7 @@
       "metadata": {
         "id": "VCbjkLLSxCUN"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -374,7 +374,7 @@
       "metadata": {
         "id": "sqonMfzwdAs5"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -408,7 +408,7 @@
       "metadata": {
         "id": "dIJ32Rs6xJsV"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -441,7 +441,7 @@
       "metadata": {
         "id": "EgXCk8Tdc303"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -513,7 +513,7 @@
         },
         "outputId": "4a2bbb29-6421-4cb8-b058-ce7053aca6f0"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -561,7 +561,7 @@
       "metadata": {
         "id": "GvXPdjPCBxOd"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -579,7 +579,7 @@
       "metadata": {
         "id": "3FHvHNMrR9Sk"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -603,7 +603,7 @@
       "metadata": {
         "id": "MkILCuT2OhBV"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -635,7 +635,7 @@
       "metadata": {
         "id": "uW4Bo-mcB6rc"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -684,7 +684,7 @@
       "metadata": {
         "id": "irJb4V32B-R8"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -709,7 +709,7 @@
       "metadata": {
         "id": "vHXmNr_wCBJm"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -734,7 +734,7 @@
       "metadata": {
         "id": "-dbh0431CEXO"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -758,7 +758,7 @@
       "metadata": {
         "id": "_ITnk1S6eGcV"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -854,7 +854,7 @@
         "id": "Q8gj-5woCXEB",
         "outputId": "9c9992d6-a304-47fd-f534-f160e5bc5e1f"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1186,7 +1186,7 @@
       "metadata": {
         "id": "0K1C-91wwP_o"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1216,7 +1216,7 @@
         "id": "BSzdJKwcwVi9",
         "outputId": "027ba961-976b-4823-b555-44a3bd2e1098"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1274,7 +1274,7 @@
         "id": "5MhZ1EchwXaL",
         "outputId": "64d8a3f4-881a-41fa-d012-12207fc1f8a0"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1332,7 +1332,7 @@
         "id": "fxN2Tbcdm5iz",
         "outputId": "9a436d1f-5868-4e1a-9903-0c76f3a215c4"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1345,6 +1345,16 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Reflection:\n",
+        "Ms. Pacman represents a challenging but manageable Atari environment for studying DQN variants. Given the importance of how the rewards differ and the complex grid layout, it is a strong test domain for the improvement of a DQN, especially when the extensions chosen are given. Signs of improvement can be seen in the higher average episodic return over time, reduced variance, fewer rewards near 0, earlier learning, smoother curves (reduced overestimation), and higher asymptotic performance (better state value estimation). Some of the challenges that I faced were exploration difficulty, like early deaths and poor coverage of the maze, but Double DQN helped to reduce noisy Q-value spikes that caused greedy misbehaviors. Delayed and context-dependent rewards are an issue, especially because the game relies heavily on these state rewards, and the only way to help this is by using a Dueling DQN that provides more accurate state value representations. Overestimation of Q-values is a known issue with DQN models, so the Double DQN combats that issue by separating action selection from evaluation. High return variance was an issue for some of the testing, so a larger replay buffer helped to stabilize the results, but I did not do too much testing with that. In the future, I could continue to test the variables individually and together to find the best way to minimize all of the challenges mentioned above. Alternative epsilon decay schedules, like exponential decay, are possible. As well as adjusting the target sync to smooth Q-value drift. Including the other extension, like PER, could increase the performance in ways that I wasn’t able to see in these tests. Survival bonuses or ghost avoidance are a great way to tackle reward shaping. Sticky actions could make the environment more realistic and encourage robust policy learning. I could also change the frame stack to better capture the motion and ghost trajectories.\n"
+      ],
+      "metadata": {
+        "id": "7g96hPmo9Myd"
+      }
     }
   ]
 }
